apps/tools/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tools
  annotations:
    gethomepage.dev/href: "https://tools.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/description: "IT-Tools"
    gethomepage.dev/icon: mdi-tools
    gethomepage.dev/app: tools # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Tools
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=tools"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`tools.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: tools-it-tools
          port: 8080
      middlewares:
        - name: mgd-devops-https
        - name: mgd-devops-ratelimit
        - name: mgd-devops-headervalidation
  tls:
    secretName: tools-tls
